--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "python-template"
 version = "0.1.0"
 description = ""
-authors = ["Your Name <you@example.com>"]
+authors = ["Alex Fazio <alessandro.fazio@me.com>"]
 
 [tool.poetry.dependencies]
 python = ">=3.11"
